# ncaa-mbb-hoops-data

./: .gitignore  README.md  pyproject.toml
python/: test_build.py  test_cli.py  test_config.py  test_derived.py  test_e2e.py  test_ingest.py  test_io.py  test_publish.py  test_rds.py  test_reshapers.py
python/ncaa_mbb_data_build/: __init__.py  __main__.py  _logging.py  build.py  cli.py  config.py  derived.py  ingest.py  io.py  publish.py  rds.py  reshapers.py
python/tests/fixtures/raw_root/: README.md
python/tests/fixtures/raw_root/mbb/: schedule_master.parquet
python/tests/fixtures/raw_root/mbb/json/: 1613299.json  5722355.json  5728709.json  5732292.json  5733807.json
scripts/: run_build.sh  run_publish.sh
